--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [
-
-            ],
+            "scripts": [],
             "allowedCommonJsDependencies": [
               "rxjs-compat",
               "lodash"
-           ]
+            ]
           },
           "configurations": {
             "production": {
@@ -94,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
